<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="SignupActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:translationY="0sp"
        app:srcCompat="@drawable/user_icon_001" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/Button2"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationY="-20sp" />

    <EditText
        android:id="@+id/txusernameRegist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="username"
        android:fontFamily="@font/open_sans"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="14sp"
        android:translationY="-20sp" />

    <EditText
        android:id="@+id/txpasswordRegist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="username"
        android:fontFamily="@font/open_sans"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="14sp"
        android:translationY="-20sp" />

    <EditText
        android:id="@+id/txpasswordconfRegist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="password"
        android:fontFamily="@font/open_sans"
        android:hint="@string/passconf"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="14sp"
        android:translationY="-20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupbutton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button2"
        android:fontFamily="@font/open_sans"
        android:text="@string/Button2"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:translationY="-20sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text="Already Have an Account ?"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupbutton2"
        android:layout_width="61dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/open_sans"
        android:scaleX="1"
        android:text="@string/login"
        android:textColor="#008EFF"
        android:textSize="12sp"
         />



</LinearLayout>
