<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />


    <ImageView
        android:id="@+id/imguser"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:clickable="true"
        android:focusable="true"
        android:translationX="45sp"
        android:translationY="60sp"
        app:srcCompat="@drawable/user_icon_001"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txsetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center"
            android:text="Settings"
            android:textColor="#1964C3"
            android:textColorHint="#1964C3"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.834"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.36" />

        <ImageView
            android:id="@+id/imgsetting"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/assets"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.852"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.284"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imgscan"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/qrcode"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.284"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/txscan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center"
            android:text=" Scan"
            android:textColor="#1964C3"
            android:textColorHint="#1964C3"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.36" />

        <ImageView
            android:id="@+id/imgattendance"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/office"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.147"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.284"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/txattendance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center"
            android:text=" Attendance"
            android:textColor="#1964C3"
            android:textColorHint="#1964C3"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.136"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.36" />

        <TextView
            android:id="@+id/txhelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center"
            android:text="Help"
            android:textColor="#1964C3"
            android:textColorHint="#1964C3"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.821"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imghelp"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/help"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.852"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.439"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/txreport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center"
            android:text="Report"
            android:textColor="#1964C3"
            android:textColorHint="#1964C3"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgreport"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/asset1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.439"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/txlocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center"
            android:text="Location"
            android:textColor="#1964C3"
            android:textColorHint="#1964C3"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imglocation"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/map"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.147"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.439"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/txtlen1"
            android:layout_width="301dp"
            android:layout_height="47dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/open_sans"
            android:gravity="center_horizontal|start"
            android:lines="2"
            android:text="@string/Multiline_Text_By_N"
            android:textColor="#1964C3"
            android:textColorHint="#1964C3"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/explorebutton1"
            app:layout_constraintHorizontal_bias="0.821"
            app:layout_constraintStart_toEndOf="@+id/imglocation"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.69" />

        <TextView
            android:id="@+id/txptlen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="PT LEN"
            android:textColor="#1964C3"
            android:textColorHint="#1964C3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.095"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.606" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/explorebutton1"
            android:layout_width="108dp"
            android:layout_height="36dp"
            android:layout_marginStart="157dp"
            android:layout_marginLeft="157dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/explore"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/explore"
            android:textColor="#1964C3"
            android:textColorHint="#1964C3"
            android:textSize="11sp"
            android:translationY="-40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.687"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.678"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txtwidit1"
            android:layout_width="303dp"
            android:layout_height="47dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/open_sans"
            android:gravity="center_horizontal|start"
            android:lines="2"
            android:text="@string/Multiline_Text_By_N1"
            android:textColor="#1964C3"
            android:textColorHint="#1964C3"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/explorebutton1"
            app:layout_constraintHorizontal_bias="0.797"
            app:layout_constraintStart_toEndOf="@+id/imglocation"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.887" />

        <TextView
            android:id="@+id/txtwidit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="Universitas Widyatama"
            android:textColor="#1964C3"
            android:textColorHint="#1964C3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.144"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/explorebutton2"
            android:layout_width="108dp"
            android:layout_height="36dp"
            android:layout_marginStart="157dp"
            android:layout_marginLeft="157dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/explore"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/explore"
            android:textColor="#1964C3"
            android:textColorHint="#1964C3"
            android:textSize="11sp"
            android:translationY="-40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.671"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.872"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/listFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



</RelativeLayout>